# soccer-predictions-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  model-training.yml  pyproject.toml  requirements-dev.txt  requirements.txt  webhooks.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_improvement.md
.github/workflows/: ci-cd.yml  data-collection.yml  dependabot.yml  deployment.yml  model-training.yml  monotoring.yml
config/: default.yaml  default.yml  development.yaml  production.yaml  scraping.yaml
config/model_configs/: ensemble_config.yaml  transformer_config.yaml
src/agents/: base_agent.py  data_collector.py  init.py  prediction_ensemble.py  strategic_intelligence.py  synthetic_intelligence.py
src/api/: init.py  main.py
src/api/middleware/: auth.py  rate_limiter.py
src/api/middleware/routes/: health.py  models.py  predictions.py
src/data/: init.py
src/data/collectors/: api_collector.py  data_validator.py  web_scraper.py
src/data/processors/: data_augmentor.py  data_cleaner.py  feature_engineer.py
src/data/schemas/: match_schema.py  player_schema.py  team_schema.py
src/data_pipelines/: real_time_collector.py
src/feature_engineers/: injury_analyzer.py  player_performance.py
src/models/: enhanced_ensemble.py  init.py
src/models/neural_networks/: ensemble_model.py  lstm_model.py  transformer_model.4py  transformer_model.py
src/models/statistical_models/: bayesian_inference.py  elo_system.py  poisson_model.py
src/scrapers/: betway_scraper.py  hollywoodbets_scraper.py
src/utils/: config.py  helpers.py  init.py  logger.py  metrics.py
tests/: init.py
tests/fixtures/: sample_matches.json  test_config.yaml
tests/integration/: test_api.py  test_data.py  test_workflows.py
tests/unit/: test_agents.py  test_models.py
web/frontend/: index.html
web/frontend/css/: responsive.css
web/frontend/js/: app.js
